<resources>
    <string name="app_name">NMedia</string>
    <string name="hello_app">NMedia!</string>
    <string name="description_post_author_avatar">Post author avatar</string>
    <string name="description_post_menu">Post menu</string>
    <string name="description_like">like</string>
    <string name="description_share">share</string>
    <string name="description_views">views</string>
    <string name="remove">Remove</string>
    <string name="content">Content</string>
    <string name="edit">Edit</string>
    <string name="edit_message">Edit message</string>
    <string name="chooser_share_post">Share post</string>
    <string name="error_empty_content">Empty content</string>
    <string name="description_post_save">Save</string>
    <string name="notification_user_liked">User %1$s liked %2$s\'s post</string>
    <string name="channel_remote_name">Server notifications</string>
    <string name="channel_remote_description">Notifications from remote server</string>
    <string name="no_posts">No posts</string>
    <string name="network_error">Network error</string>
    <string name="retry">Retry</string>
</resources>